	the configure option --enable-prebuilt-html.  This may be
	useful for those who wish to make HTML help available outside
	R, e.g. on a local web site.

    o	An experimental tag \Sexpr has been added to Rd files, to
	evaluate expressions at build, install, or render time.
	Currently install time and render time evaluation are
	supported.

    o	The parse_Rd() parser has been made more tolerant of coding
	errors in Rd files:  now all syntax errors are reported as
	warnings, and an attempt is made to continue parsing.

    o	parse_Rd() now has an argument 'fragment' (default FALSE) to
	accept small fragments of Rd files (so that \Sexpr can output
	Rd code which is then parsed).

    o	parse_Rd() now always converts its input to UTF-8.  The Rd2*
	rendering functions have a new parameter, 'outputEncoding',
	which controls how their output is encoded.

    o	parse_Rd() no longer includes the newline as part of a
	"%"-style comment.

    o	There have been various bug fixes and code reorganization in
	the Rd renderers Rd2HTML, Rd2latex, Rd2txt, and Rd2ex.

	All example files are now created with either ASCII or UTF-8
	encoding, and the encoding is only marked in the file if there
	is any non-UTF-8 code (previously it was marked if the help
	file had non-ASCII contents, possibly in other sections).

    o	print.Rd() now adds necessary escape characters so that
	printing and re-parsing an Rd object should produce an
	equivalent object.

    o	parse_Rd() was incorrectly handling multiple backslashes in
	R code strings, converting 4n+3 backslashes to 2n+1 instead
	of 2n+2.


COMPRESSION

    o	New function untar() to list or unpack tar archives, possibly
	compressed.  This uses either an external 'tar' command or an
	internal implementation.

    o	New function tar() to create (possibly compressed) tar archives.

    o	New functions memCompress() and memDecompress() for in-memory
	compression and decompression.
